PA3/tests/bad/bad_comp.cl
class Main {
	main() : SELF_TYPE {
		not 1
	};
};